## Process this file with automake to produce Makefile.in

# Background rate files to distribute
#bkgs = bkg_dummy.txt
#bkgsdir   = $(datadir)/models
#bkgs_DATA = $(bkgs)

# Models to distribute
models      = crab.xml \
              crab_poly.xml \
              crab_profile.xml \
              disk.xml \
              gauss.xml \
              shell.xml
modelsdir   = $(datadir)/models
models_DATA = $(models)

# Extra files to be distributed in the tar file
EXTRA_DIST = $(models)
